--- a/WFA.OCR/MainForm.resx
+++ b/WFA.OCR/MainForm.resx
@@ -117,10 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnClose.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAStJREFUWEft
+        lk0OgjAQhTmCJP4k6sLjmagn1Y2IJurCOyhQd+NM+5oogvLX6KJf0kRmynuPtBYCj8fz99D9PqfbbYjL
+        ylCSjOReXDaDBVY8iEcsgih/BeZ73LtEuT5EFLLABkInyrIJWqXIHD3X3LNhjR5azaDrtc9CWwh+DFFg
+        HqLVDt4DAxaMIFwYgmtT3TNzIgmOVjd8CgHzM3qRzEWrWxBiByMJMSWlZvz7gtrOmblFnlybG8MDhgmU
+        pmNMcws/5ZANYxjLiKWGtnuwFHY/yHC37nly5s9L4D6ErDEbHWGo/+cIZM+Jo7N9gM33Yo5W/sTsPsTL
+        zldqXXTCOQtRxdzyFuLpsGpEHXOLDiFzTYhKL7BSWGAJoTav4wXKzWCB332QeDwe9wTBA/vHFBHBrMub
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAACQAAHQSAAB0EgAAAAAAAAAA
