--- a/WFA.PlugIn/Image/ImageResource.resx
+++ b/WFA.PlugIn/Image/ImageResource.resx
@@ -139,6 +139,15 @@
   <data name="folder_tree_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\folder_tree_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="google_translate_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\google_translate_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="google_translate_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\google_translate_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="google_translate_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\google_translate_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="home_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\home_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -210,6 +219,9 @@
   </data>
   <data name="plus_math_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\plus_math_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="settings_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\settings_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="settings_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\settings_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
