--- a/WFA.OCR/UserControls/OCR/UCClientOcr.resx
+++ b/WFA.OCR/UserControls/OCR/UCClientOcr.resx
@@ -117,4 +117,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnSetting.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAhNJREFUWEft
+        l01rE1EUhkMIpFDbCNad3WkUBPsl7vUHFMV/UhBa3QmKi9KCi4JtEVzUvbgx1G6q/0GiC6niQrGbtIou
+        9Pic3DcQMs7kJk4IQh54YHLOey6TZDJzUxjxX2Fm5/E2vsI6fpV+vI8rWFU8P1h0HncxlhrOarx/WKSE
+        D/EXOp9xE6/jRTwt/fgGbuEXdHxmDUtarjcYPImtd/0D7+OE2qmQmcQHmnH806ioHQcDZXzt0/AeL6kV
+        DTMzmnX8mimr1R3C/jE7H/GMyj3D7DR+8oVgQ+VsCF7B3/gN51TuG9a4jN+15oLK6RB6ic5dlVJRzvQy
+        FSL3QtJqKv0dAv47d/y3HXPBNdHLVIhU8LAZNjunchKad0LGHqmUG6y5HZa2ZZWS0NwLGVtUKTdY0+8T
+        zq5KSWi+Cxk7q1Imynb9Chxira+3rlISmkchYydUykTZ2BOYCGlrqJSE5nHI2LhKmSib6wm8DZmMK7UN
+        ZWNP4EJI2xuVktDs6SJUNvYEoi7CWyFjj1XKRNnYE3gS0rakUhKaw70ROQRaj+BB3IpfqJQOoTn0zUTe
+        DyNfM+6xTnAdnTwfx6sqd4dwEZ83x8L1cFWtaJi5plnnGRbVioOBzi3ZKp5SOxUyU+h7wf63ZC0Y7NyU
+        NnAHb2IVx6Qfe+0pesb5t01pOywynG15Jyza/sfkA/6UBzi4PyYjBkeh8AcKvqZsZ2USwgAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="btnTranslate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAk1JREFUWEft
+        ljtoFFEUhhcRxSZRC0VJEaKinVZCBBUhhVooBIJY2YggViJYCBY+OrUUrGwsIqmChRZWPiCCEEVBULBR
+        Gwu19REdv//cM7uzu3eyc2d3u3zwsfd1zp69c2d2Git0kmXZOB7HmQSncNRT1Ick1/Ef1uEb7vdU6RC8
+        E+t+ec6ip0uH4OmQw7iK2taqPkGx5OnSIVjXMmfGh5swNhYbF4zPKUj4UDrE9irA5r3bBsODL8DticcO
+        pQDbcnyJl/E06mzcRB3WS2g7xefwLgHtR/ga1+Jm/IJ3fdqgP9QCtuF3nMdn+B5HfNqgP9xDSP9oGDZO
+        4H1UUSn8whcYf1gxUbYDB/ADfsJ3+Bv7QU/MDZ6+BYNtBeAI3kMduIe4FddhvwWIw/61LRjsLGA7PsWT
+        vsTQ5ABou8SGBsOc0b3A8fky7O7g81jolhIt4EiYM97gY9QzQKqduxyHcC+uxq8aKCFawEb8YdP1+Iyr
+        cAHX420sI77DTBzERazzt3wDJ0IzO4X7QjNK6SVuokVhrdEM8H6MPXg+NLMHvla3b4yBF/DW53TXiJ+o
+        2/ia9bqpVEDxUN5CFVQsqoj+mNbgLOqxLHfjLozRuwDBwoth/bLovOj/Qq90xbekSc/xCjupVoBg8YUQ
+        U8pzX6fbtcgf3IT5uShSvQBBwCTmv6yTs6gdiHEGt+CS9VqkFVCE4L8hR5NzeCc0u9AzQefmo/VaTHu6
+        dAjWy0k/6Mzs8HTpEKyHVeq7QI5274qnqg9JRlGFFE99Fcc9xQpOo/EfCtAVy2sHfuoAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="btnHome.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAASdJREFUWEft
+        lM0OgkAMhHkEL0ajPqD6qB5NNAEfwoP8HTTrVqcE1i1CFzjxJZMobWdGTYxmQjBpuibh7bSYPN+9iuJG
+        sq+3eDwN9Klt8NXKQBf7bIXxuFBQLfwMTVOCvmoblFDgsyhO5n5fkOg1SiSj/Ry+cIyi0Uu0hTOjlegS
+        zgxeok84M1gJTTjzUyLLNhh1IySccUrEnUvQYmg407sEwmMcmJBwhjzYj7zFEm44CaNg6p5W/hKvsjxi
+        gf9avQV4JglrDWrzr3dZHjBqYgd783gs+QCPG/BMEtYa8OzjbTPwWKaLGd5WaG5ENGaaGxGNmeZGRGOm
+        uRHRmGluRDRmmhsRjZnmRkRjprkR4YM2YbXCt+MKq//xHbvCaoVvxxVWZ2ZqRNEbHVWrPzbDIKgAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
 </root>
