--- a/WFA.PlugIn/Image/ImageResource.resx
+++ b/WFA.PlugIn/Image/ImageResource.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="contact_details_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\contact_details_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="copy_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\copy_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -210,6 +213,9 @@
   </data>
   <data name="logo_dSi_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\icon\logo_dsi_9.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="male_user_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\male_user_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="multiply_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\multiply_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
