--- a/WFA.PlugIn/Image/ImageResource.resx
+++ b/WFA.PlugIn/Image/ImageResource.resx
@@ -223,6 +223,12 @@
   <data name="multiply_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\multiply_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="neko" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\gif\neko.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="neko2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\gif\neko2.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pdf_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\pdf_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -237,6 +243,9 @@
   </data>
   <data name="settings_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\settings_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sprite_006" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\gif\sprite-006.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="subtract_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\subtract_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
