--- a/WFA.PlugIn/Image/ImageResource.resx
+++ b/WFA.PlugIn/Image/ImageResource.resx
@@ -265,4 +265,10 @@
   <data name="youtube_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\png\youtube_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="office_365_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\office_365_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="microsoft_word_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\png\microsoft_word_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
